[package]
name = "specbmc"
version = "0.1.0"
authors = ["Emmanuel Pescosta <emmanuelpescosta099@gmail.com>"]
description = "Bounded model checker for speculative non-interference."
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/emmanuel099/specbmc"
readme = "README.md"

[features]
# Build Falcon with capstone 4 support
capstone4 = ["falcon/capstone4"]

[dependencies]
clap = "2.33.0"
error-chain = "0.12"
num-bigint = "0.3"
num-traits = "0.2.1"
falcon = { git = "https://github.com/emmanuel099/falcon" }
muasm_parser = { git = "https://github.com/emmanuel099/muasm-parser" }
rsmt2 = { git = "https://github.com/emmanuel099/rsmt2.git" }
bit-vec = "0.6.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
console = "0.11.1"
colored = "1.9.3"
indicatif = "0.15.0"
nom = "5.1.0"
derivative = "2.1.1"
derive_builder = "0.9.0"
